packages/kotlin/ttrp-frontend/src/test/resources/expr/negative/var-001.ttrp
x = load(files.a)
y = filter(load(files.b), x > 0)
# expect: TTRP-EXP-001
